--- a/roth-vs-traditional.html
+++ b/roth-vs-traditional.html
@@ -31,12 +31,12 @@
             <hr>
 
             <p>
-                Should you use a <b>Roth IRA</b> (post-tax) or a <b>Traditional IRA</b> (pre-tax) for retirement? At its core, this choice is a bet on whether your <b>tax rate will be higher or lower in retirement</b> than it is now.
+                Should you contribute to a <b>Roth</b> (post-tax) or a <b>Traditional</b> (pre-tax) account for retirement? This choice is purely a bet on whether your <b>tax rate will be higher or lower in retirement</b> than it is now.
             </p>
 
             <h2>The Essential Tradeoff</h2>
             <p>
-                A <b>Traditional IRA</b> lets you deduct your contribution today, lowering your current taxes. Your investments grow tax-deferred, and you pay income tax when you withdraw in retirement.<br>
+                A <b>Traditional IRA</b> lets you deduct your contribution today, lowering your current taxable income. Your investments grow tax-deferred, and you pay income tax upon withdrawal in retirement.<br>
                 A <b>Roth IRA</b> is funded with money after you’ve already paid taxes. Your investments grow tax-free, and withdrawals in retirement are completely tax-free.
             </p>
 
@@ -51,13 +51,13 @@
                 <li><b>n</b> = years until withdrawal</li>
             </ul>
 
-            <p><b>Traditional IRA:</b> After-tax withdrawal:</p>
+            <p><b>Traditional:</b>:</p>
             <div style="margin-left: 2em;">
                 \[
                 \text{After-tax amount} = C(1 + r)^n \times (1 - T_1)
                 \]
             </div>
-            <p><b>Roth IRA:</b> After-tax withdrawal:</p>
+            <p><b>Roth IRA:</b>:</p>
             <div style="margin-left: 2em;">
                 \[
                 \text{After-tax amount} = C \times (1 - T_0) \times (1 + r)^n
@@ -75,18 +75,17 @@
 
             <h2>Other Considerations</h2>
             <ul>
-                <li>Required Minimum Distributions: Traditional accounts force you to withdraw at a certain age; Roth IRAs do not.</li>
-                <li>Income and contribution limits may affect which accounts you're eligible for.</li>
-                <li>Roth IRAs offer withdrawal flexibility, which may be helpful if you need funds early.</li>
+                <li>Required Minimum Distributions: Traditional accounts force you to withdraw at a certain age; Roth accounts do not.</li>
+                <li>Income limits may affect which accounts you are eligible for.</li>
+                <li>Roth accounts offer greater withdrawal flexibility, which may be helpful for liquidity needs before retirement age.</li>
             </ul>
 
             <h2>Bottom Line</h2>
             <p>
-                For most people, the Roth vs. Traditional choice simply comes down to: <b>Do you expect to pay a higher or lower tax rate in retirement?</b> 
-                If you expect higher taxes later, the Roth is more attractive; if lower, Traditional is generally better.
+                The Roth vs. Traditional choice simply comes down to: <b>Do you expect to pay a higher or lower tax rate in retirement?</b> 
+                If you expect higher taxes later, the Roth is favorable; if lower, Traditional is better.
             </p>
             <p>
-                Splitting contributions between both adds flexibility if you’re unsure. As always, individual situations vary—this framework clarifies the key point!
             </p>
         </div>
     </div>
