--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div style="color: #fff;">
             <a href="CV.pdf" style="color: inherit; text-decoration: none; margin-left: 20px;">CV</a>
             <a href="research.html" style="color: inherit; text-decoration: none; margin-left: 20px;">Research</a>
-<!--             <a href="finance.html" style="color: inherit; text-decoration: none; margin-left: 20px;">Finance Thoughts</a>
-        </div> -->
+<!--             <a href="finance.html" style="color: inherit; text-decoration: none; margin-left: 20px;">Finance Thoughts</a> -->
+        </div> 
     </div>
 
     <div class="container">
